Adjusted package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "boilerplate2",
+  "name": "reacttimeapp",
   "version": "1.0.0",
   "private": true,
-  "description": "Simple react app",
+  "description": "React Time App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
